UPD. modified dto numeric time name
