# docs/swagger.json
@@ -6,7 +6,7 @@
     "paths": {
         "/api/litclock-service/v1/numeric-time": {
             "post": {
-                "description": "convert numberic time to human friendly text",
+                "description": "convert numeric time to human friendly text",
                 "consumes": [
                     "application/json"
                 ],
@@ -81,10 +81,10 @@
         "dto.TimeConvertRequest": {
             "type": "object",
             "required": [
-                "numbericTime"
+                "numericTime"
             ],
             "properties": {
-                "numbericTime": {
+                "numericTime": {
                     "type": "string"
                 }
             }
